load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:bazel/lib/agent.bzl", "with_repo_path")
load("//:bazel/rules/agent_config.bzl", "generate_config")

AGENT_CORECHECKS = [
    "container",
    "containerd",
    "container_image",
    "container_lifecycle",
    "cpu",
    "cri",
    "snmp",
    "docker",
    "file_handle",
    "go_expvar",
    "io",
    "jmx",
    "kubernetes_apiserver",
    "load",
    "memory",
    "ntp",
    "oom_kill",
    "oracle",
    "oracle-dbm",
    "sbom",
    "systemd",
    "tcp_queue_length",
    "uptime",
    "winproc",
    "jetson",
    "telemetry",
    "orchestrator_pod",
    "orchestrator_ecs",
    "cisco_sdwan",
]

go_library(
    name = "agent_lib",
    srcs = [
        "doc.go",
        "installer.go",
        "klog.go",
        "main.go",
        "main_common.go",
        "main_linux_cgo.go",
        "main_linux_no_cgo.go",
        "main_windows.go",
    ],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/util/log",
        "@io_k8s_klog_v2//:klog",
    ] + select({
        "@rules_go//go/platform:aix": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:android": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:freebsd": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:illumos": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:ios": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:js": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:linux": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:openbsd": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:osx": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:plan9": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:qnx": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:solaris": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/installer/command",
            "//cmd/installer/subcommands",
            "//cmd/internal/runcmd",
            "@com_github_spf13_cobra//:cobra",
        ],
        "@rules_go//go/platform:windows": [
            "//cmd/agent/command",
            "//cmd/agent/subcommands",
            "//cmd/agent/windows/service",
            "//cmd/internal/runcmd",
            "//pkg/util/winutil/servicemain",
        ],
        "//conditions:default": [],
    }),
)

DEFAULT_XDEFS = with_repo_path({
    "/pkg/collector/python.pythonHome3": "/opt/datadog-agent/embedded",
    "/pkg/config/setup.DefaultPython": "3",
    "/pkg/config/setup.ForceDefaultPython": "true",
})

INSTALL_PATH = "/opt/datadog-agent"

go_binary(
    name = "agent",
    # keep
    data = ["//rtloader:datadog-agent-three"],
    embed = [":agent_lib"],
    # keep
    gc_linkopts = [
        "-r",
        ":".join([
            "{}/embedded/lib".format(INSTALL_PATH),
            # Adds the rpath to find the datadog-agent-three library file at runtime when running from bazel.
            # A bit ugly but $(rlocationpath) doesn't work and this serves our purpose
            "$$ORIGIN/agent.runfiles/_main/rtloader",
        ]),
    ] + select({
        "@rules_go//go/platform:linux": [
            # Fix go-nvml runtime symbol finding issue
            "-extldflags",
            "-Wl,-z,lazy",
        ],
        "//conditions:default": [],
    }),
    # keep
    gotags = select({
        "@rules_go//go/platform:darwin": [
            "bundle_installer",
            "consul",
            "cri",
            "crio",
            "datadog.no_waf",
            "ec2",
            "etcd",
            "jetson",
            "jmx",
            "kubeapiserver",
            "kubelet",
            "netcgo",
            "oracle",
            "orchestrator",
            "otlp",
            "python",
            "systemd",
            "zk",
            "zlib",
            "zstd",
        ],
        "@rules_go//go/platform:linux": [
            "bundle_installer",
            "consul",
            "containerd",
            "no_dynamic_plugins",
            "cri",
            "crio",
            "datadog.no_waf",
            "docker",
            "ec2",
            "etcd",
            "jetson",
            "jmx",
            "kubeapiserver",
            "kubelet",
            "netcgo",
            "nvml",
            "oracle",
            "orchestrator",
            "otlp",
            "podman",
            "python",
            "systemd",
            "trivy",
            "zk",
            "zlib",
            "zstd",
        ],
        "@rules_go//go/platform:windows": [
            "bundle_installer",
            "consul",
            "containerd",
            "no_dynamic_plugins",
            "cri",
            "crio",
            "datadog.no_waf",
            "docker",
            "ec2",
            "etcd",
            "jetson",
            "jmx",
            "kubeapiserver",
            "kubelet",
            "netcgo",
            "oracle",
            "orchestrator",
            "otlp",
            "podman",
            "python",
            "systemd",
            "trivy",
            "wmi",
            "zk",
            "zlib",
            "zstd",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    # keep
    x_defs = select({
        "@rules_go//go/platform:linux": with_repo_path({
            "/pkg/config/setup.InstallPath": INSTALL_PATH,
        }) | DEFAULT_XDEFS,
        "//conditions:default": {},
    }),
)

pkg_tar(
    name = "agent_configs",
    srcs = [
        ":config_files",
        ":datadog_yaml",
    ],
)

generate_config(
    name = "datadog_yaml",
    out = "datadog.yaml.example",
    build_type = "agent-py3",
)

generate_config(
    name = "system-probe_yaml",
    out = "system-probe.yaml.example",
    build_type = "system-probe",
)

generate_config(
    name = "security-agent_yaml",
    out = "security-agent.yaml.example",
    build_type = "security-agent",
)

pkg_files(
    name = "config_files",
    srcs = [
        ":datadog_yaml",
        ":security-agent_yaml",
        ":system-probe_yaml",
    ] + glob(["dist/conf.d/%s.d/**" % check for check in AGENT_CORECHECKS]),
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "agent_binaries",
    srcs = [":bin_files"],
)

pkg_files(
    name = "bin_files",
    srcs = [
        "dist/dd-agent",
        ":agent",
    ],
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "/bin/agent",
)
