load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "agentless-scanner_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/datadog-agent/cmd/agentless-scanner",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "agentless-scanner",
    embed = [":agentless-scanner_lib"],
    visibility = ["//visibility:public"],
)
