load("@rules_pkg//pkg:install.bzl", "pkg_install")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "ai-prompt-logger-native-host",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    target_compatible_with = ["@platforms//os:macos"],
    deps = [
        "@crates//:anyhow",
        "@crates//:chrono",
        "@crates//:hostname",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:ureq",
    ],
)

pkg_files(
    name = "native_host_files",
    srcs = [":ai-prompt-logger-native-host"],
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "embedded/bin",
    visibility = ["//packages:__subpackages__"],
)

pkg_install(
    name = "install",
    srcs = [":native_host_files"],
)
