load("@rules_pkg//pkg:install.bzl", "pkg_install")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

_MACOS_OR_WINDOWS = select({
    "@platforms//os:macos": [],
    "@platforms//os:windows": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

rust_binary(
    name = "ai-prompt-logger-native-host",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    target_compatible_with = _MACOS_OR_WINDOWS,
    deps = [
        "@crates//:anyhow",
        "@crates//:chrono",
        "@crates//:hostname",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:ureq",
    ],
)

pkg_files(
    name = "native_host_files_macos",
    srcs = [":ai-prompt-logger-native-host"],
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "embedded/bin",
    target_compatible_with = ["@platforms//os:macos"],
    visibility = ["//packages:__subpackages__"],
)

pkg_files(
    name = "native_host_files_windows",
    srcs = [":ai-prompt-logger-native-host"],
    prefix = "bin/agent",
    target_compatible_with = ["@platforms//os:windows"],
    visibility = ["//packages:__subpackages__"],
)

pkg_install(
    name = "install",
    srcs = select({
        "@platforms//os:macos": [":native_host_files_macos"],
        "@platforms//os:windows": [":native_host_files_windows"],
        "//conditions:default": [],
    }),
    target_compatible_with = _MACOS_OR_WINDOWS,
)
