load("@rules_pkg//pkg:install.bzl", "pkg_install")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

_MACOS_OR_WINDOWS = select({
    "@platforms//os:macos": [],
    "@platforms//os:windows": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

rust_binary(
    name = "ai-usage-agent-native-host",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["ai_usage_native_host.yaml.example"],
    edition = "2024",
    target_compatible_with = _MACOS_OR_WINDOWS,
    deps = [
        "@crates//:anyhow",
        "@crates//:chrono",
        "@crates//:hostname",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:ureq",
    ] + select({
        "@platforms//os:macos": [
            "@crates//:libc",
        ],
        "@platforms//os:windows": [
            "@crates//:windows-registry",
            "@crates//:windows-sys",
        ],
        "//conditions:default": [],
    }),
)

pkg_files(
    name = "native_host_files",
    srcs = [":ai-usage-agent-native-host"],
    attributes = select({
        "@platforms//os:windows": None,  # Windows doesn't use Unix permissions.
        "//conditions:default": pkg_attributes(
            mode = "0755",
        ),
    }),
    prefix = select({
        "@platforms//os:macos": "embedded/bin",
        "@platforms//os:windows": "bin/agent",
    }),
    target_compatible_with = _MACOS_OR_WINDOWS,
    visibility = ["//packages:__subpackages__"],
)

pkg_files(
    name = "ai_usage_config_example",
    srcs = ["ai_usage_native_host.yaml.example"],
    prefix = select({
        "@platforms//os:macos": "etc",
        "@platforms//os:windows": "etc/datadog-agent",
    }),
    target_compatible_with = _MACOS_OR_WINDOWS,
    visibility = ["//packages:__subpackages__"],
)

pkg_files(
    name = "macos_launcher",
    srcs = ["run_ai_usage_native_host.sh"],
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "embedded/bin",
    target_compatible_with = ["@platforms//os:macos"],
    visibility = ["//packages:__subpackages__"],
)

pkg_files(
    name = "macos_desktop_monitor_launchagent",
    srcs = ["com.datadoghq.ai-usage-agent.desktop-monitor.plist.example"],
    attributes = pkg_attributes(
        mode = "0644",
    ),
    prefix = "etc",
    target_compatible_with = ["@platforms//os:macos"],
    visibility = ["//packages:__subpackages__"],
)

pkg_files(
    name = "windows_manifest",
    srcs = ["manifest.json"],
    prefix = "bin/agent/dist",
    renames = {
        "manifest.json": "com.datadoghq.ai_usage_agent.native_host.json",
    },
    target_compatible_with = ["@platforms//os:windows"],
    visibility = ["//packages:__subpackages__"],
)

pkg_install(
    name = "install",
    srcs = [
        ":ai_usage_config_example",
        ":native_host_files",
    ] + select({
        "@platforms//os:macos": [
            ":macos_desktop_monitor_launchagent",
            ":macos_launcher",
        ],
        "@platforms//os:windows": [":windows_manifest"],
    }),
    target_compatible_with = _MACOS_OR_WINDOWS,
)

# Windows-only flat layout for the "eudm" fleet installer extension layer. The binary and
# example config are placed at the layer root, matching the paths that the extension hook expects
# under ext/eudm/ (see pkg/fleet/installer/packages/datadog_agent_eudm_windows.go). The
# Chrome manifest and registry entries are created at install time by the extension hook, so only
# the binary and example config ship in the layer.
pkg_files(
    name = "ai_usage_extension_files",
    srcs = [
        "ai_usage_native_host.yaml.example",
        ":ai-usage-agent-native-host",
    ],
    target_compatible_with = ["@platforms//os:windows"],
    visibility = ["//packages:__subpackages__"],
)

pkg_install(
    name = "install-extension",
    srcs = [":ai_usage_extension_files"],
    target_compatible_with = ["@platforms//os:windows"],
)
