[package]
name = "ai-usage-agent-native-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native messaging host for AI usage monitoring Chrome extension"

[[bin]]
name = "ai-usage-agent-native-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hostname.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ureq.workspace = true

[target.'cfg(windows)'.dependencies]
windows-registry.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
