load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cluster-agent-cloudfoundry_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/datadog-agent/cmd/cluster-agent-cloudfoundry",
    visibility = ["//visibility:private"],
    deps = select({
        "@rules_go//go/platform:aix": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:android": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:darwin": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:freebsd": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:illumos": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:ios": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:js": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:linux": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:netbsd": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:openbsd": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:osx": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:plan9": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:qnx": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "@rules_go//go/platform:solaris": [
            "//cmd/cluster-agent-cloudfoundry/command",
            "//cmd/cluster-agent-cloudfoundry/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "cluster-agent-cloudfoundry",
    embed = [":cluster-agent-cloudfoundry_lib"],
    visibility = ["//visibility:public"],
)
