load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tasks:build_tags.bzl", "CLUSTER_AGENT_TAGS")

go_library(
    name = "cluster-agent_lib",
    srcs = [
        "klog.go",
        "main.go",
    ],
    importpath = "github.com/DataDog/datadog-agent/cmd/cluster-agent",
    visibility = ["//visibility:private"],
    deps = select({
        "@rules_go//go/platform:aix": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:android": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:darwin": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:freebsd": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:illumos": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:ios": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:js": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:linux": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:netbsd": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:openbsd": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:osx": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:plan9": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:qnx": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "@rules_go//go/platform:solaris": [
            "//cmd/cluster-agent/command",
            "//cmd/cluster-agent/subcommands",
            "//pkg/util/flavor",
            "//pkg/util/log",
            "@io_k8s_klog_v2//:klog",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "cluster-agent",
    embed = [":cluster-agent_lib"],
    gotags = CLUSTER_AGENT_TAGS,
    visibility = ["//visibility:public"],
    # Stamp version/commit at binary link time, overriding the "dev" defaults
    # set in //pkg/version:version.  Build with --stamp
    # --workspace_status_command=bazel/tools/workspace_status.sh
    x_defs = {
        "github.com/DataDog/datadog-agent/pkg/version.Commit": "{STABLE_GIT_COMMIT}",
        "github.com/DataDog/datadog-agent/pkg/version.AgentVersion": "{STABLE_AGENT_VERSION}",
        "github.com/DataDog/datadog-agent/pkg/version.AgentVersionURLSafe": "{STABLE_AGENT_VERSION_URL_SAFE}",
        "github.com/DataDog/datadog-agent/pkg/version.AgentPackageVersion": "{STABLE_AGENT_VERSION}",
        "github.com/DataDog/datadog-agent/pkg/version.AgentPayloadVersion": "{STABLE_AGENT_PAYLOAD_VERSION}",
    },
)
