load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config-stream-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/datadog-agent/cmd/config-stream-client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/pbgo/core",
        "//pkg/util/grpc",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)

go_binary(
    name = "config-stream-client",
    embed = [":config-stream-client_lib"],
    visibility = ["//visibility:public"],
)
