load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config-stream-client_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/datadog-agent/cmd/config-stream-client",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/DataDog/datadog-agent/pkg/proto/pbgo/core",
        "//vendor/github.com/DataDog/datadog-agent/pkg/util/grpc",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/credentials",
        "//vendor/google.golang.org/grpc/metadata",
        "//vendor/google.golang.org/protobuf/types/known/structpb",
    ],
)

go_binary(
    name = "config-stream-client",
    embed = [":config-stream-client_lib"],
    visibility = ["//visibility:public"],
)
